# Python-Deep-OOP

./: .gitignore  README.md  pyproject.toml  teste.py
01_Classes/py/: 02_Class_Attributes.py  function_attributes.py
01_objects_and_classes/ipynb/: 16_Class_Body_Scope.ipynb
01_objects_and_classes/py/: 00_objects_and_classes.py  03_Callable_Class_Attributes.py
